--- a/lab2/gallery.css
+++ b/lab2/gallery.css
@@ -108,6 +108,28 @@ body {
 }
 
 
+.add-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    width: 100%;
+    margin-top: 20px;
+}
+
+.add-btn {
+    margin-top: 10px;
+    background-color: #8a2be2;
+    color: white;
+    border: none;
+    padding: 10px 15px;
+    border-radius: 20px;
+    cursor: pointer;
+    font-weight: bold;
+}
+
+
 .upload-container {
     display: flex;
     flex-direction: column;
@@ -120,7 +142,7 @@ body {
 
 .upload-btn {
     margin-top: 10px;
-    background-color: #8a2be2;
+    background-color: #e3242b;
     color: white;
     border: none;
     padding: 10px 15px;
@@ -142,3 +164,20 @@ body {
     height: auto;
     margin-bottom: 10px;
 }
+
+
+.LS_photoes {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap : 10px;
+    margin-top: 20px; 
+}
+
+.LS_photoes img {
+    max-width: 200px;
+    height: auto;
+    margin-bottom: 10px;
+
+}
+
